# IBMFFontEditor

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.13ab9c7  CMakeLists.txt.user.c5247c0  README.md  actionButton.cpp  actionButton.h  bitmapRenderer.cpp  bitmapRenderer.h  blocksDialog.cpp  blocksDialog.h  blocksDialog.ui  characterSelector.cpp  characterSelector.h  characterViewer.cpp  characterViewer.h  defs.hpp  drawingSpace.cpp  drawingSpace.h  fix16Delegate.h  fontParameterDialog.cpp  fontParameterDialog.h  fontParameterDialog.ui  freeType.cpp  freeType.h  hexFontParameterDialog.cpp  hexFontParameterDialog.h  hexFontParameterDialog.ui  ibmf_defs.hpp  ibmf_font_mod.hpp  kerningDelegate.cpp  kerningDelegate.h  kerningEditor.cpp  kerningEditor.h  kerningItem.cpp  kerningItem.h  kerningTestDialog.cpp  kerningTestDialog.h  kerningTestDialog.ui  main.cpp  (+22 more)
Books/Chinese/: Diary of a Mad Man - Xun Lu.epub  Journey to the West - Cheng'en Wu.epub
Fonts/: EC-Regular_100.h  EC-Regular_100.ibmf  EC-Regular_212.h  EC-Regular_212.ibmf  EC-Regular_75.h  EC-Regular_75.ibmf  ECSans-Regular_100.h  ECSans-Regular_100.ibmf  ECSans-Regular_212.h  ECSans-Regular_212.ibmf  ECSans-Regular_75.h  ECSans-Regular_75.ibmf  Tahoma_75.h  Tahoma_75.ibmf  platformio.ini  test.ibmf  test_20230331_161116.ibmf  test_20230331_161144.ibmf  test_20230331_161705.ibmf
Fonts/IBMF/: arial.ibmf  tahoma.ibmf  tahoma_300.ibmf  toto.ibmf
Fonts/IBMFTestLatin/: EC-BoldItalic_100.ibmf  EC-BoldItalic_150.ibmf  EC-BoldItalic_166.ibmf  EC-BoldItalic_212.ibmf  EC-BoldItalic_75.ibmf  EC-Bold_100.ibmf  EC-Bold_150.ibmf  EC-Bold_166.ibmf  EC-Bold_212.ibmf  EC-Bold_75.ibmf  EC-Italic_100.ibmf  EC-Italic_150.ibmf  EC-Italic_166.ibmf  EC-Italic_212.ibmf  EC-Italic_75.ibmf  EC-Regular_100.ibmf  EC-Regular_150.ibmf  EC-Regular_166.ibmf  EC-Regular_212.ibmf  EC-Regular_75.ibmf  ECSans-BoldItalic_100.ibmf  ECSans-BoldItalic_150.ibmf  ECSans-BoldItalic_166.ibmf  ECSans-BoldItalic_212.ibmf  ECSans-BoldItalic_75.ibmf  ECSans-Bold_100.ibmf  ECSans-Bold_150.ibmf  ECSans-Bold_166.ibmf  ECSans-Bold_212.ibmf  ECSans-Bold_75.ibmf  ECSans-Italic_100.ibmf  ECSans-Italic_150.ibmf  ECSans-Italic_166.ibmf  ECSans-Italic_212.ibmf  ECSans-Italic_75.ibmf  ECSans-Regular_100.ibmf  ECSans-Regular_150.ibmf  ECSans-Regular_166.ibmf  (+12 more)
IBMFDriver/: IBMFDefs.hpp  IBMFFontMod.cpp  IBMFFontMod.hpp  IBMFHexImport.cpp  IBMFHexImport.hpp  IBMFTTFImport.cpp  IBMFTTFImport.hpp  RLEExtractor.hpp  RLEGenerator.hpp  ibmf_defs.hpp  ibmf_font_mod.cpp  ibmf_font_mod.hpp  rle_extractor.hpp  rle_generator.hpp
Kerning/: kernEntry.h  kerningDelegate.cpp  kerningDelegate.h  kerningDialog.cpp  kerningDialog.h  kerningEditor.cpp  kerningEditor.h  kerningItem.cpp  kerningItem.h  kerningModel.cpp  kerningModel.h  kerningRenderer.cpp  kerningRenderer.h
Pangrams/: European Pangrams.txt
Unicode/: UBlocks.hpp  uBlockSelectionDialog.hpp
fonts/: EC-Regular_100.ibmf  EC-Regular_100.ibmf.test  EC-Regular_212.ibmf  EC-Regular_212.ibmf.test  EC-Regular_75.ibmf  EC-Regular_75.ibmf.test  ECSans-Regular_100.ibmf  ECSans-Regular_100.ibmf.test  ECSans-Regular_212.ibmf  ECSans-Regular_212.ibmf.test  ECSans-Regular_75.ibmf
